cabal-version: 2.0
name: hackage-overlay-repo-tool
synopsis: Tool for generating head.hackage-style repos
version: 0
maintainer: hvr@gnu.org
build-type: Simple
license: GPL-3
license-file: LICENSE
tested-with: GHC==8.2.1, GHC==8.0.2, GHC==7.10.3

executable hackage-overlay-repo-tool
  default-language: Haskell2010
  hs-source-dirs: src/
  main-is: Main.hs

  build-depends: base            ^>= 4.8.2.0
                 ||              ^>= 4.9.0.0
                 ||              ^>= 4.10.0.0
                 ||              ^>= 4.14.0.0
                 ||              ^>= 4.16.0.0

               , shelly          ^>= 1.9
               , text            ^>= 1.2.2.2
               , system-filepath ^>= 0.4.13.4
               , containers      ^>= 0.5.6.2
               , optparse-applicative ^>= 0.16.0.0
               , filepath

  if !impl(ghc >= 8)
    build-depends: semigroups    ^>= 0.18.3
