cabal-version: 2.0
name: tool
synopsis: Tool for generating head.hackage-style repos
version: 0
maintainer: hvr@gnu.org
build-type: Simple
license: GPL-3
license-file: LICENSE
tested-with: GHC==8.10.7

executable tool
  default-language: Haskell2010
  hs-source-dirs: src/
  main-is: Main.hs

  build-depends: base            ^>= 4.14.0.0

               , shelly          ^>= 1.10.0
               , text            ^>= 1.2.2.2
               , containers      ^>= 0.6.5.1
               , filepath        ^>= 1.4.2.2
               , optparse-applicative ^>= 0.17.0.0

  if !impl(ghc >= 8)
    build-depends: semigroups    ^>= 0.18.3
